parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> COMMENT
Rule 2     statement -> <empty>
Rule 3     statement -> vmif
Rule 4     statement -> vmdef
Rule 5     statement -> vmroute
Rule 6     statement -> vmdefgw
Rule 7     statement -> vmservices
Rule 8     statement -> vmpreserve
Rule 9     statement -> vmmem
Rule 10    statement -> vmdhcp
Rule 11    statement -> vmnat
Rule 12    statement -> vmstp
Rule 13    statement -> vmradvd
Rule 14    statement -> vmpppoe
Rule 15    statement -> vmfec
Rule 16    statement -> vmilm
Rule 17    statement -> vmnhlfe
Rule 18    statement -> vmlabelspace
Rule 19    statement -> prefs
Rule 20    statement -> vm8021x
Rule 21    statement -> vmmgmtip
Rule 22    statement -> vmrouter
Rule 23    vmradvd -> ID LBRACK RADVD RBRACK EQUALS radvdexpr
Rule 24    radvdexpr -> ETHIF
Rule 25    radvdexpr -> ETHIF COLON radvdattrs
Rule 26    radvdattrs -> radvdpair
Rule 27    radvdattrs -> radvdpair COLON radvdattrs
Rule 28    radvdattrs -> radvdsingle COLON radvdattrs
Rule 29    radvdattrs -> radvdsingle
Rule 30    radvdsingle -> STATELESS
Rule 31    radvdsingle -> STATEFUL
Rule 32    radvdpair -> MIN_INTERVAL EQUALS NUMBER
Rule 33    radvdpair -> MAX_INTERVAL EQUALS NUMBER
Rule 34    radvdpair -> RDNSS EQUALS IPV6
Rule 35    vmrouter -> ID LBRACK ROUTER RBRACK EQUALS rtlist
Rule 36    rtlist -> rtproto VIRG rtlist
Rule 37    rtlist -> rtproto
Rule 38    rtproto -> RIP
Rule 39    rtproto -> RIPNG
Rule 40    rtproto -> OSPF
Rule 41    rtproto -> BGP
Rule 42    rtproto -> OSPF6
Rule 43    rtproto -> ISIS
Rule 44    prefs -> GLOBAL LBRACK PATH RBRACK EQUALS PATHNAME
Rule 45    prefs -> GLOBAL LBRACK MEM RBRACK EQUALS NUMBER
Rule 46    prefs -> GLOBAL LBRACK VM RBRACK EQUALS NUMBER
Rule 47    prefs -> GLOBAL LBRACK CLEAN RBRACK EQUALS BOOL
Rule 48    prefs -> GLOBAL LBRACK COMPACT RBRACK EQUALS BOOL
Rule 49    prefs -> GLOBAL LBRACK PRESERVE RBRACK EQUALS BOOL
Rule 50    prefs -> GLOBAL LBRACK RW RBRACK EQUALS BOOL
Rule 51    prefs -> GLOBAL LBRACK NAME RBRACK EQUALS ID
Rule 52    vmmgmtip -> ID LBRACK MGMT_IP RBRACK EQUALS IPMASK COLON VLAN EQUALS NUMBER
Rule 53    vm8021x -> ID LBRACK IEEE8021X RBRACK EQUALS ON COLON expr8021x
Rule 54    expr8021x -> expr8021xsv
Rule 55    expr8021x -> expr8021xcl
Rule 56    expr8021xcl -> RADIUS_SERVER EQUALS IP
Rule 57    expr8021xsv -> attr8021x COLON expr8021xsv
Rule 58    expr8021xsv -> attr8021x
Rule 59    attr8021x -> USERS EQUALS userlist
Rule 60    attr8021x -> RADIUS_CLIENTS EQUALS ipaddrlist
Rule 61    attr8021x -> PORT EQUALS NUMBER
Rule 62    ipaddrlist -> IP VIRG ipaddrlist
Rule 63    ipaddrlist -> IP
Rule 64    vmdef -> ID LBRACK TYPE RBRACK EQUALS types
Rule 65    types -> GENERIC
Rule 66    types -> GATEWAY
Rule 67    types -> ROUTER
Rule 68    types -> SWITCH
Rule 69    types -> PPPOE
Rule 70    types -> MPLS
Rule 71    types -> PBX
Rule 72    vmroute -> ID LBRACK ROUTE RBRACK EQUALS IPMASK COLON gwspec
Rule 73    vmroute -> ID LBRACK ROUTE RBRACK EQUALS IPV6MASK COLON gwspecng
Rule 74    vmroute -> ID LBRACK ROUTE RBRACK EQUALS DEFAULT COLON gwspec
Rule 75    vmroute -> ID LBRACK ROUTE RBRACK EQUALS DEFAULT6 COLON gwspecng
Rule 76    gwspec -> GATEWAY EQUALS IP
Rule 77    gwspec -> DEV EQUALS PPPIF
Rule 78    gwspecng -> GATEWAY EQUALS IPV6
Rule 79    gwspecng -> DEV EQUALS PPPIF
Rule 80    vmdefgw -> ID LBRACK DEFAULTGW RBRACK EQUALS gwdef
Rule 81    gwdef -> IP
Rule 82    gwdef -> IPV6
Rule 83    vmmem -> ID LBRACK MEM RBRACK EQUALS NUMBER
Rule 84    vmservices -> ID LBRACK SERVICES RBRACK EQUALS servlist
Rule 85    servlist -> servid VIRG servlist
Rule 86    servlist -> servid
Rule 87    servid -> ID
Rule 88    servid -> RADVD
Rule 89    vmpreserve -> ID LBRACK PRESERVE RBRACK EQUALS pathlist
Rule 90    pathlist -> PATHNAME COLON pathlist
Rule 91    pathlist -> PATHNAME
Rule 92    vmdhcp -> ID LBRACK DHCP RBRACK EQUALS dhcpexpr
Rule 93    dhcpexpr -> ETHIF COLON dhcpattrs
Rule 94    dhcpattrs -> dhcppair COLON dhcpattrs
Rule 95    dhcpattrs -> dhcppair
Rule 96    dhcppair -> RANGE EQUALS IP VIRG IP
Rule 97    dhcppair -> DEFLEASE EQUALS NUMBER
Rule 98    dhcppair -> MAXLEASE EQUALS NUMBER
Rule 99    dhcppair -> GATEWAY EQUALS IP
Rule 100   dhcppair -> NETMASK EQUALS IP
Rule 101   vmif -> ID LBRACK ETHIF RBRACK EQUALS ethexpr
Rule 102   ethexpr -> UPLINK COLON uplinkattrs
Rule 103   ethexpr -> ID COLON ethattrs
Rule 104   ethexpr -> ID
Rule 105   ethattrs -> ethpair COLON ethattrs
Rule 106   ethattrs -> ethpair
Rule 107   ethpair -> IPATTR EQUALS iplist
Rule 108   ethpair -> IPATTR EQUALS DHCP
Rule 109   ethpair -> RATE EQUALS NUMBER
Rule 110   ethpair -> UNTAGGED EQUALS NUMBER
Rule 111   ethpair -> tagged EQUALS taglist
Rule 112   ethpair -> IPV6ATTR EQUALS ipv6list
Rule 113   ethpair -> NOIPV6
Rule 114   ethpair -> DOWN
Rule 115   ipv6list -> IPV6MASK VIRG ipv6list
Rule 116   ipv6list -> IPV6MASK
Rule 117   ethpair -> IEEE8021X_AUTH EQUALS NUMBER
Rule 118   ethpair -> IEEE8021X_USER EQUALS USERPAIR
Rule 119   iplist -> IPMASK VIRG iplist
Rule 120   iplist -> IPMASK
Rule 121   tagged -> TAGGED
Rule 122   tagged -> TAGGEDS
Rule 123   ethpair -> STPCOST EQUALS NUMBER
Rule 124   ethpair -> STPPRIO EQUALS NUMBER
Rule 125   ethpair -> PPPOEAC EQUALS ID
Rule 126   ethpair -> PPPOEUSER EQUALS ID
Rule 127   ethpair -> PPPOEPASSWD EQUALS ID
Rule 128   ethpair -> MODE EQUALS PPPOE
Rule 129   taglist -> NUMBER VIRG taglist
Rule 130   taglist -> NUMBER
Rule 131   taglist -> tagpair VIRG taglist
Rule 132   taglist -> tagpair
Rule 133   tagpair -> LPAR NUMBER VIRG iplist RPAR
Rule 134   tagpair -> LPAR NUMBER VIRG IPATTR EQUALS iplist RPAR
Rule 135   tagpair -> LPAR NUMBER VIRG ipv6list RPAR
Rule 136   tagpair -> LPAR NUMBER VIRG IPV6ATTR EQUALS ipv6list RPAR
Rule 137   uplinkattrs -> ethattrs
Rule 138   uplinkattrs -> uplinkpair COLON ethattrs
Rule 139   uplinkattrs -> uplinkpair
Rule 140   uplinkpair -> BRIDGE EQUALS ETHIF
Rule 141   vmif -> ID LBRACK PPPIF RBRACK EQUALS pppexpr
Rule 142   pppexpr -> ID COLON pppattrs
Rule 143   pppexpr -> ID
Rule 144   pppattrs -> ppppair COLON pppattrs
Rule 145   pppattrs -> ppppair
Rule 146   ppppair -> IPATTR EQUALS IPMASK
Rule 147   ppppair -> IPV6ATTR EQUALS IPV6MASK
Rule 148   ppppair -> RATE EQUALS NUMBER
Rule 149   ppppair -> BER EQUALS FLOATNUMBER
Rule 150   ppppair -> DELAY EQUALS NUMBER
Rule 151   ppppair -> INTERFACE EQUALS ETHIF
Rule 152   ppppair -> USER EQUALS ID
Rule 153   ppppair -> PASSWORD EQUALS ID
Rule 154   ppppair -> TYPE EQUALS PPPOE
Rule 155   ppppair -> DEBUG
Rule 156   ppppair -> DEBUG EQUALS BOOL
Rule 157   vmif -> ID LBRACK BONDIF RBRACK EQUALS bondexpr
Rule 158   bondexpr -> ID COLON bondattrs
Rule 159   bondexpr -> ID
Rule 160   bondattrs -> bondpair COLON bondattrs
Rule 161   bondattrs -> bondpair
Rule 162   bondpair -> IPATTR EQUALS iplist
Rule 163   bondpair -> IPV6ATTR EQUALS ipv6list
Rule 164   bondpair -> IPATTR EQUALS DHCP
Rule 165   bondpair -> MODE EQUALS bondmode
Rule 166   bondpair -> LACP_RATE EQUALS SLOW
Rule 167   bondpair -> LACP_RATE EQUALS FAST
Rule 168   bondpair -> RATE EQUALS NUMBER
Rule 169   bondpair -> MIIMON EQUALS NUMBER
Rule 170   bondmode -> RR
Rule 171   bondmode -> 8023AD
Rule 172   bondmode -> BACKUP
Rule 173   bondmode -> XOR
Rule 174   bondmode -> TLB
Rule 175   bondmode -> ALB
Rule 176   bondpair -> INTERFACES EQUALS iflist
Rule 177   iflist -> ETHIF VIRG iflist
Rule 178   iflist -> ETHIF
Rule 179   vmnat -> ID LBRACK NAT RBRACK EQUALS interface
Rule 180   interface -> ETHIF
Rule 181   interface -> PPPIF
Rule 182   interface -> BONDIF
Rule 183   vmstp -> ID LBRACK STP RBRACK EQUALS stpexpr
Rule 184   stpexpr -> ON COLON stpattrs
Rule 185   stpexpr -> ON
Rule 186   stpexpr -> OFF
Rule 187   stpattrs -> stppair COLON stpattrs
Rule 188   stpattrs -> stppair
Rule 189   stppair -> BRPRIO EQUALS NUMBER
Rule 190   stppair -> BRHELLO EQUALS NUMBER
Rule 191   stppair -> BRAGE EQUALS NUMBER
Rule 192   stppair -> BRDELAY EQUALS NUMBER
Rule 193   stppair -> VLAN EQUALS NUMBER
Rule 194   vmpppoe -> ID LBRACK PPPOE RBRACK EQUALS ID COLON pppoeattrs
Rule 195   pppoeattrs -> pppoepair COLON pppoeattrs
Rule 196   pppoeattrs -> pppoepair
Rule 197   pppoepair -> RANGE EQUALS IP VIRG IP
Rule 198   pppoepair -> IPATTR EQUALS IP
Rule 199   pppoepair -> INTERFACE EQUALS ETHIF
Rule 200   pppoepair -> USERS EQUALS userlist
Rule 201   pppoepair -> RATE EQUALS NUMBER
Rule 202   userlist -> USERPAIR VIRG userlist
Rule 203   userlist -> USERPAIR
Rule 204   vmfec -> ID LBRACK FEC RBRACK EQUALS IPMASK COLON NHLFE EQUALS NUMBER
Rule 205   vmnhlfe -> ID LBRACK NHLFE RBRACK EQUALS NUMBER COLON nhlfeattrs
Rule 206   nhlfeattrs -> nhlfepair COLON nhlfeattrs
Rule 207   nhlfeattrs -> nhlfepair
Rule 208   nhlfepair -> INTERFACE EQUALS ETHIF
Rule 209   nhlfepair -> INTERFACE EQUALS PPPIF
Rule 210   nhlfepair -> LABEL EQUALS NUMBER
Rule 211   nhlfepair -> IPATTR EQUALS IP
Rule 212   nhlfepair -> NHLFE EQUALS NUMBER
Rule 213   vmilm -> ID LBRACK ILM RBRACK EQUALS NUMBER COLON ilmattrs
Rule 214   ilmattrs -> ilmpair COLON ilmpair
Rule 215   ilmattrs -> ilmpair
Rule 216   ilmpair -> LABELSPACE EQUALS NUMBER
Rule 217   ilmpair -> NHLFE EQUALS NUMBER
Rule 218   vmlabelspace -> ID LBRACK LABELSPACE RBRACK EQUALS NUMBER COLON INTERFACES EQUALS anyiflist
Rule 219   anyiflist -> ETHIF VIRG anyiflist
Rule 220   anyiflist -> PPPIF VIRG anyiflist
Rule 221   anyiflist -> ETHIF
Rule 222   anyiflist -> PPPIF

Terminals, with rules where they appear

8023AD               : 171
ALB                  : 175
BACKUP               : 172
BER                  : 149
BGP                  : 41
BONDIF               : 157 182
BOOL                 : 47 48 49 50 156
BRAGE                : 191
BRDELAY              : 192
BRHELLO              : 190
BRIDGE               : 140
BRPRIO               : 189
CLEAN                : 47
COLON                : 25 27 28 52 53 57 72 73 74 75 90 93 94 102 103 105 138 142 144 158 160 184 187 194 195 204 205 206 213 214 218
COMMENT              : 1
COMPACT              : 48
DEBUG                : 155 156
DEFAULT              : 74
DEFAULT6             : 75
DEFAULTGW            : 80
DEFLEASE             : 97
DELAY                : 150
DEV                  : 77 79
DHCP                 : 92 108 164
DOWN                 : 114
EQUALS               : 23 32 33 34 35 44 45 46 47 48 49 50 51 52 52 53 56 59 60 61 64 72 73 74 75 76 77 78 79 80 83 84 89 92 96 97 98 99 100 101 107 108 109 110 111 112 117 118 123 124 125 126 127 128 134 136 140 141 146 147 148 149 150 151 152 153 154 156 157 162 163 164 165 166 167 168 169 176 179 183 189 190 191 192 193 194 197 198 199 200 201 204 204 205 208 209 210 211 212 213 216 217 218 218
ETHIF                : 24 25 93 101 140 151 177 178 180 199 208 219 221
FAST                 : 167
FEC                  : 204
FLOATNUMBER          : 149
GATEWAY              : 66 76 78 99
GENERIC              : 65
GLOBAL               : 44 45 46 47 48 49 50 51
ID                   : 23 35 51 52 53 64 72 73 74 75 80 83 84 87 89 92 101 103 104 125 126 127 141 142 143 152 153 157 158 159 179 183 194 194 204 205 213 218
IEEE8021X            : 53
IEEE8021X_AUTH       : 117
IEEE8021X_USER       : 118
ILM                  : 213
INTERFACE            : 151 199 208 209
INTERFACES           : 176 218
IP                   : 56 62 63 76 81 96 96 99 100 197 197 198 211
IPATTR               : 107 108 134 146 162 164 198 211
IPMASK               : 52 72 119 120 146 204
IPV6                 : 34 78 82
IPV6ATTR             : 112 136 147 163
IPV6MASK             : 73 115 116 147
ISIS                 : 43
LABEL                : 210
LABELSPACE           : 216 218
LACP_RATE            : 166 167
LBRACK               : 23 35 44 45 46 47 48 49 50 51 52 53 64 72 73 74 75 80 83 84 89 92 101 141 157 179 183 194 204 205 213 218
LPAR                 : 133 134 135 136
MAXLEASE             : 98
MAX_INTERVAL         : 33
MEM                  : 45 83
MGMT_IP              : 52
MIIMON               : 169
MIN_INTERVAL         : 32
MODE                 : 128 165
MPLS                 : 70
NAME                 : 51
NAT                  : 179
NETMASK              : 100
NHLFE                : 204 205 212 217
NOIPV6               : 113
NUMBER               : 32 33 45 46 52 61 83 97 98 109 110 117 123 124 129 130 133 134 135 136 148 150 168 169 189 190 191 192 193 201 204 205 210 212 213 216 217 218
OFF                  : 186
ON                   : 53 184 185
OSPF                 : 40
OSPF6                : 42
PASSWORD             : 153
PATH                 : 44
PATHNAME             : 44 90 91
PBX                  : 71
PORT                 : 61
PPPIF                : 77 79 141 181 209 220 222
PPPOE                : 69 128 154 194
PPPOEAC              : 125
PPPOEPASSWD          : 127
PPPOEUSER            : 126
PRESERVE             : 49 89
RADIUS_CLIENTS       : 60
RADIUS_SERVER        : 56
RADVD                : 23 88
RANGE                : 96 197
RATE                 : 109 148 168 201
RBRACK               : 23 35 44 45 46 47 48 49 50 51 52 53 64 72 73 74 75 80 83 84 89 92 101 141 157 179 183 194 204 205 213 218
RDNSS                : 34
RIP                  : 38
RIPNG                : 39
ROUTE                : 72 73 74 75
ROUTER               : 35 67
RPAR                 : 133 134 135 136
RR                   : 170
RW                   : 50
SERVICES             : 84
SLOW                 : 166
STATEFUL             : 31
STATELESS            : 30
STP                  : 183
STPCOST              : 123
STPPRIO              : 124
SWITCH               : 68
TAGGED               : 121
TAGGEDS              : 122
TLB                  : 174
TYPE                 : 64 154
UNTAGGED             : 110
UPLINK               : 102
USER                 : 152
USERPAIR             : 118 202 203
USERS                : 59 200
VIRG                 : 36 62 85 96 115 119 129 131 133 134 135 136 177 197 202 219 220
VLAN                 : 52 193
VM                   : 46
XOR                  : 173
error                : 

Nonterminals, with rules where they appear

anyiflist            : 218 219 220
attr8021x            : 57 58
bondattrs            : 158 160
bondexpr             : 157
bondmode             : 165
bondpair             : 160 161
dhcpattrs            : 93 94
dhcpexpr             : 92
dhcppair             : 94 95
ethattrs             : 103 105 137 138
ethexpr              : 101
ethpair              : 105 106
expr8021x            : 53
expr8021xcl          : 55
expr8021xsv          : 54 57
gwdef                : 80
gwspec               : 72 74
gwspecng             : 73 75
iflist               : 176 177
ilmattrs             : 213
ilmpair              : 214 214 215
interface            : 179
ipaddrlist           : 60 62
iplist               : 107 119 133 134 162
ipv6list             : 112 115 135 136 163
nhlfeattrs           : 205 206
nhlfepair            : 206 207
pathlist             : 89 90
pppattrs             : 142 144
pppexpr              : 141
pppoeattrs           : 194 195
pppoepair            : 195 196
ppppair              : 144 145
prefs                : 19
radvdattrs           : 25 27 28
radvdexpr            : 23
radvdpair            : 26 27
radvdsingle          : 28 29
rtlist               : 35 36
rtproto              : 36 37
servid               : 85 86
servlist             : 84 85
statement            : 0
stpattrs             : 184 187
stpexpr              : 183
stppair              : 187 188
tagged               : 111
taglist              : 111 129 131
tagpair              : 131 132
types                : 64
uplinkattrs          : 102
uplinkpair           : 138 139
userlist             : 59 200 202
vm8021x              : 20
vmdef                : 4
vmdefgw              : 6
vmdhcp               : 10
vmfec                : 15
vmif                 : 3
vmilm                : 16
vmlabelspace         : 18
vmmem                : 9
vmmgmtip             : 21
vmnat                : 11
vmnhlfe              : 17
vmpppoe              : 14
vmpreserve           : 8
vmradvd              : 13
vmroute              : 5
vmrouter             : 22
vmservices           : 7
vmstp                : 12

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . COMMENT
    (2) statement -> .
    (3) statement -> . vmif
    (4) statement -> . vmdef
    (5) statement -> . vmroute
    (6) statement -> . vmdefgw
    (7) statement -> . vmservices
    (8) statement -> . vmpreserve
    (9) statement -> . vmmem
    (10) statement -> . vmdhcp
    (11) statement -> . vmnat
    (12) statement -> . vmstp
    (13) statement -> . vmradvd
    (14) statement -> . vmpppoe
    (15) statement -> . vmfec
    (16) statement -> . vmilm
    (17) statement -> . vmnhlfe
    (18) statement -> . vmlabelspace
    (19) statement -> . prefs
    (20) statement -> . vm8021x
    (21) statement -> . vmmgmtip
    (22) statement -> . vmrouter
    (101) vmif -> . ID LBRACK ETHIF RBRACK EQUALS ethexpr
    (141) vmif -> . ID LBRACK PPPIF RBRACK EQUALS pppexpr
    (157) vmif -> . ID LBRACK BONDIF RBRACK EQUALS bondexpr
    (64) vmdef -> . ID LBRACK TYPE RBRACK EQUALS types
    (72) vmroute -> . ID LBRACK ROUTE RBRACK EQUALS IPMASK COLON gwspec
    (73) vmroute -> . ID LBRACK ROUTE RBRACK EQUALS IPV6MASK COLON gwspecng
    (74) vmroute -> . ID LBRACK ROUTE RBRACK EQUALS DEFAULT COLON gwspec
    (75) vmroute -> . ID LBRACK ROUTE RBRACK EQUALS DEFAULT6 COLON gwspecng
    (80) vmdefgw -> . ID LBRACK DEFAULTGW RBRACK EQUALS gwdef
    (84) vmservices -> . ID LBRACK SERVICES RBRACK EQUALS servlist
    (89) vmpreserve -> . ID LBRACK PRESERVE RBRACK EQUALS pathlist
    (83) vmmem -> . ID LBRACK MEM RBRACK EQUALS NUMBER
    (92) vmdhcp -> . ID LBRACK DHCP RBRACK EQUALS dhcpexpr
    (179) vmnat -> . ID LBRACK NAT RBRACK EQUALS interface
    (183) vmstp -> . ID LBRACK STP RBRACK EQUALS stpexpr
    (23) vmradvd -> . ID LBRACK RADVD RBRACK EQUALS radvdexpr
    (194) vmpppoe -> . ID LBRACK PPPOE RBRACK EQUALS ID COLON pppoeattrs
    (204) vmfec -> . ID LBRACK FEC RBRACK EQUALS IPMASK COLON NHLFE EQUALS NUMBER
    (213) vmilm -> . ID LBRACK ILM RBRACK EQUALS NUMBER COLON ilmattrs
    (205) vmnhlfe -> . ID LBRACK NHLFE RBRACK EQUALS NUMBER COLON nhlfeattrs
    (218) vmlabelspace -> . ID LBRACK LABELSPACE RBRACK EQUALS NUMBER COLON INTERFACES EQUALS anyiflist
    (44) prefs -> . GLOBAL LBRACK PATH RBRACK EQUALS PATHNAME
    (45) prefs -> . GLOBAL LBRACK MEM RBRACK EQUALS NUMBER
    (46) prefs -> . GLOBAL LBRACK VM RBRACK EQUALS NUMBER
    (47) prefs -> . GLOBAL LBRACK CLEAN RBRACK EQUALS BOOL
    (48) prefs -> . GLOBAL LBRACK COMPACT RBRACK EQUALS BOOL
    (49) prefs -> . GLOBAL LBRACK PRESERVE RBRACK EQUALS BOOL
    (50) prefs -> . GLOBAL LBRACK RW RBRACK EQUALS BOOL
    (51) prefs -> . GLOBAL LBRACK NAME RBRACK EQUALS ID
    (53) vm8021x -> . ID LBRACK IEEE8021X RBRACK EQUALS ON COLON expr8021x
    (52) vmmgmtip -> . ID LBRACK MGMT_IP RBRACK EQUALS IPMASK COLON VLAN EQUALS NUMBER
    (35) vmrouter -> . ID LBRACK ROUTER RBRACK EQUALS rtlist

    COMMENT         shift and go to state 17
    $end            reduce using rule 2 (statement -> .)
    ID              shift and go to state 10
    GLOBAL          shift and go to state 24

    statement                      shift and go to state 1
    vmdef                          shift and go to state 2
    vmdhcp                         shift and go to state 6
    vmservices                     shift and go to state 14
    vmmem                          shift and go to state 4
    vmif                           shift and go to state 15
    vmnat                          shift and go to state 16
    prefs                          shift and go to state 9
    vmpreserve                     shift and go to state 7
    vm8021x                        shift and go to state 18
    vmroute                        shift and go to state 19
    vmmgmtip                       shift and go to state 20
    vmstp                          shift and go to state 11
    vmilm                          shift and go to state 3
    vmfec                          shift and go to state 21
    vmnhlfe                        shift and go to state 8
    vmrouter                       shift and go to state 22
    vmdefgw                        shift and go to state 23
    vmradvd                        shift and go to state 5
    vmlabelspace                   shift and go to state 13
    vmpppoe                        shift and go to state 12

state 1

    (0) S' -> statement .



state 2

    (4) statement -> vmdef .

    $end            reduce using rule 4 (statement -> vmdef .)


state 3

    (16) statement -> vmilm .

    $end            reduce using rule 16 (statement -> vmilm .)


state 4

    (9) statement -> vmmem .

    $end            reduce using rule 9 (statement -> vmmem .)


state 5

    (13) statement -> vmradvd .

    $end            reduce using rule 13 (statement -> vmradvd .)


state 6

    (10) statement -> vmdhcp .

    $end            reduce using rule 10 (statement -> vmdhcp .)


state 7

    (8) statement -> vmpreserve .

    $end            reduce using rule 8 (statement -> vmpreserve .)


state 8

    (17) statement -> vmnhlfe .

    $end            reduce using rule 17 (statement -> vmnhlfe .)


state 9

    (19) statement -> prefs .

    $end            reduce using rule 19 (statement -> prefs .)


state 10

    (101) vmif -> ID . LBRACK ETHIF RBRACK EQUALS ethexpr
    (141) vmif -> ID . LBRACK PPPIF RBRACK EQUALS pppexpr
    (157) vmif -> ID . LBRACK BONDIF RBRACK EQUALS bondexpr
    (64) vmdef -> ID . LBRACK TYPE RBRACK EQUALS types
    (72) vmroute -> ID . LBRACK ROUTE RBRACK EQUALS IPMASK COLON gwspec
    (73) vmroute -> ID . LBRACK ROUTE RBRACK EQUALS IPV6MASK COLON gwspecng
    (74) vmroute -> ID . LBRACK ROUTE RBRACK EQUALS DEFAULT COLON gwspec
    (75) vmroute -> ID . LBRACK ROUTE RBRACK EQUALS DEFAULT6 COLON gwspecng
    (80) vmdefgw -> ID . LBRACK DEFAULTGW RBRACK EQUALS gwdef
    (84) vmservices -> ID . LBRACK SERVICES RBRACK EQUALS servlist
    (89) vmpreserve -> ID . LBRACK PRESERVE RBRACK EQUALS pathlist
    (83) vmmem -> ID . LBRACK MEM RBRACK EQUALS NUMBER
    (92) vmdhcp -> ID . LBRACK DHCP RBRACK EQUALS dhcpexpr
    (179) vmnat -> ID . LBRACK NAT RBRACK EQUALS interface
    (183) vmstp -> ID . LBRACK STP RBRACK EQUALS stpexpr
    (23) vmradvd -> ID . LBRACK RADVD RBRACK EQUALS radvdexpr
    (194) vmpppoe -> ID . LBRACK PPPOE RBRACK EQUALS ID COLON pppoeattrs
    (204) vmfec -> ID . LBRACK FEC RBRACK EQUALS IPMASK COLON NHLFE EQUALS NUMBER
    (213) vmilm -> ID . LBRACK ILM RBRACK EQUALS NUMBER COLON ilmattrs
    (205) vmnhlfe -> ID . LBRACK NHLFE RBRACK EQUALS NUMBER COLON nhlfeattrs
    (218) vmlabelspace -> ID . LBRACK LABELSPACE RBRACK EQUALS NUMBER COLON INTERFACES EQUALS anyiflist
    (53) vm8021x -> ID . LBRACK IEEE8021X RBRACK EQUALS ON COLON expr8021x
    (52) vmmgmtip -> ID . LBRACK MGMT_IP RBRACK EQUALS IPMASK COLON VLAN EQUALS NUMBER
    (35) vmrouter -> ID . LBRACK ROUTER RBRACK EQUALS rtlist

    LBRACK          shift and go to state 25


state 11

    (12) statement -> vmstp .

    $end            reduce using rule 12 (statement -> vmstp .)


state 12

    (14) statement -> vmpppoe .

    $end            reduce using rule 14 (statement -> vmpppoe .)


state 13

    (18) statement -> vmlabelspace .

    $end            reduce using rule 18 (statement -> vmlabelspace .)


state 14

    (7) statement -> vmservices .

    $end            reduce using rule 7 (statement -> vmservices .)


state 15

    (3) statement -> vmif .

    $end            reduce using rule 3 (statement -> vmif .)


state 16

    (11) statement -> vmnat .

    $end            reduce using rule 11 (statement -> vmnat .)


state 17

    (1) statement -> COMMENT .

    $end            reduce using rule 1 (statement -> COMMENT .)


state 18

    (20) statement -> vm8021x .

    $end            reduce using rule 20 (statement -> vm8021x .)


state 19

    (5) statement -> vmroute .

    $end            reduce using rule 5 (statement -> vmroute .)


state 20

    (21) statement -> vmmgmtip .

    $end            reduce using rule 21 (statement -> vmmgmtip .)


state 21

    (15) statement -> vmfec .

    $end            reduce using rule 15 (statement -> vmfec .)


state 22

    (22) statement -> vmrouter .

    $end            reduce using rule 22 (statement -> vmrouter .)


state 23

    (6) statement -> vmdefgw .

    $end            reduce using rule 6 (statement -> vmdefgw .)


state 24

    (44) prefs -> GLOBAL . LBRACK PATH RBRACK EQUALS PATHNAME
    (45) prefs -> GLOBAL . LBRACK MEM RBRACK EQUALS NUMBER
    (46) prefs -> GLOBAL . LBRACK VM RBRACK EQUALS NUMBER
    (47) prefs -> GLOBAL . LBRACK CLEAN RBRACK EQUALS BOOL
    (48) prefs -> GLOBAL . LBRACK COMPACT RBRACK EQUALS BOOL
    (49) prefs -> GLOBAL . LBRACK PRESERVE RBRACK EQUALS BOOL
    (50) prefs -> GLOBAL . LBRACK RW RBRACK EQUALS BOOL
    (51) prefs -> GLOBAL . LBRACK NAME RBRACK EQUALS ID

    LBRACK          shift and go to state 26


state 25

    (101) vmif -> ID LBRACK . ETHIF RBRACK EQUALS ethexpr
    (141) vmif -> ID LBRACK . PPPIF RBRACK EQUALS pppexpr
    (157) vmif -> ID LBRACK . BONDIF RBRACK EQUALS bondexpr
    (64) vmdef -> ID LBRACK . TYPE RBRACK EQUALS types
    (72) vmroute -> ID LBRACK . ROUTE RBRACK EQUALS IPMASK COLON gwspec
    (73) vmroute -> ID LBRACK . ROUTE RBRACK EQUALS IPV6MASK COLON gwspecng
    (74) vmroute -> ID LBRACK . ROUTE RBRACK EQUALS DEFAULT COLON gwspec
    (75) vmroute -> ID LBRACK . ROUTE RBRACK EQUALS DEFAULT6 COLON gwspecng
    (80) vmdefgw -> ID LBRACK . DEFAULTGW RBRACK EQUALS gwdef
    (84) vmservices -> ID LBRACK . SERVICES RBRACK EQUALS servlist
    (89) vmpreserve -> ID LBRACK . PRESERVE RBRACK EQUALS pathlist
    (83) vmmem -> ID LBRACK . MEM RBRACK EQUALS NUMBER
    (92) vmdhcp -> ID LBRACK . DHCP RBRACK EQUALS dhcpexpr
    (179) vmnat -> ID LBRACK . NAT RBRACK EQUALS interface
    (183) vmstp -> ID LBRACK . STP RBRACK EQUALS stpexpr
    (23) vmradvd -> ID LBRACK . RADVD RBRACK EQUALS radvdexpr
    (194) vmpppoe -> ID LBRACK . PPPOE RBRACK EQUALS ID COLON pppoeattrs
    (204) vmfec -> ID LBRACK . FEC RBRACK EQUALS IPMASK COLON NHLFE EQUALS NUMBER
    (213) vmilm -> ID LBRACK . ILM RBRACK EQUALS NUMBER COLON ilmattrs
    (205) vmnhlfe -> ID LBRACK . NHLFE RBRACK EQUALS NUMBER COLON nhlfeattrs
    (218) vmlabelspace -> ID LBRACK . LABELSPACE RBRACK EQUALS NUMBER COLON INTERFACES EQUALS anyiflist
    (53) vm8021x -> ID LBRACK . IEEE8021X RBRACK EQUALS ON COLON expr8021x
    (52) vmmgmtip -> ID LBRACK . MGMT_IP RBRACK EQUALS IPMASK COLON VLAN EQUALS NUMBER
    (35) vmrouter -> ID LBRACK . ROUTER RBRACK EQUALS rtlist

    ETHIF           shift and go to state 37
    PPPIF           shift and go to state 32
    BONDIF          shift and go to state 45
    TYPE            shift and go to state 35
    ROUTE           shift and go to state 46
    DEFAULTGW       shift and go to state 41
    SERVICES        shift and go to state 43
    PRESERVE        shift and go to state 34
    MEM             shift and go to state 36
    DHCP            shift and go to state 27
    NAT             shift and go to state 38
    STP             shift and go to state 47
    RADVD           shift and go to state 30
    PPPOE           shift and go to state 29
    FEC             shift and go to state 28
    ILM             shift and go to state 44
    NHLFE           shift and go to state 40
    LABELSPACE      shift and go to state 33
    IEEE8021X       shift and go to state 39
    MGMT_IP         shift and go to state 31
    ROUTER          shift and go to state 42


state 26
